# zephyr

boards/arm/lpcxpresso11u68/: lpcxpresso11u68.dts  lpcxpresso11u68_defconfig
boards/arm/stm32f746g_disco/: stm32f746g_disco.dts
drivers/clock_control/: a31t21x.h  clock_control_lpc11u6x.c
drivers/display/: display_stm32_ltdc.c
drivers/flash/: flash_stm32_qspi.c
drivers/gpio/: a31t21x.h  gpio_lpc11u6x.c
drivers/input/: input_ft5336.c  input_gt911.c
drivers/memc/: memc_stm32.c
drivers/serial/: a31t21x_uart.h  uart_lpc11u6x.c  uart_lpc11u6x.h
dts/arm/nxp/: nxp_lpc11u68.dtsi  nxp_lpc11u6x.dtsi
include/zephyr/dt-bindings/pinctrl/: lpc11u6x-pinctrl.h
samples/application_development/code_relocation_nocopy/: CMakeLists.txt
samples/application_development/code_relocation_nocopy/boards/: stm32f746g_disco.conf
samples/modules/lvgl/demos/: Kconfig  prj.conf
subsys/modbus/: CMakeLists.txt
